methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:34: error: 'case' expected but 'match' found.
        match 1 => fleur(rouge);
        ^FlowerPot:34: error: '}' expected but ';' found.
        match 1 => fleur(rouge);
                               ^FlowerPot:35: error: illegal start of statement
        match 2 => fleur(bleu);
        ^FlowerPot:36: error: illegal start of statement
        match 3 => fleur(vert);
        ^FlowerPot:37: error: illegal start of statement
        match 4 => fleur( rose);
        ^FlowerPot:44: error: eof expected but '}' found.
}
^