methods.flowerpot.FlowerPot.scala.code
var rouge:Color=Color.RED;
var rose:Color=Color.PINK;
var bleu:Color=Color.CYAN;
var orange:Color=Color.ORANGE;
var vert:Color=Color.GREEN;
var jaune:Color=Color.YELLOW;

/**
se situe au centre, trace la fleur de la couleur ce
repart du centre, orient? comme au d?but

*/
def fleur(c:Color){
  setCouleurBrosse(jaune);
  baisseBrosse();
  leveBrosse();
  setCouleurBrosse(c);
  for(i <-1 to 4){
    avance();
    baisseBrosse();
    leveBrosse();
    recule();
    gauche();
    
  }
  
  
}

def growFlowers(){
  avance();
  for (i <- 1 to 4){
   		i match {
        match 1 => fleur(rouge);
        match 2 => fleur(bleu);
        match 3 => fleur(vert);
        match 4 => fleur( rose);
      }
    	for(k <- 1 to 4){avance();}
    	droite();
  }
}